[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/runway.png" type="Texture" id=1]
[ext_resource path="res://scripts/location.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Stacked pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/landed_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Awkward.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sprites/package_icon.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[node name="location" type="Node2D" groups=["location"]]
script = ExtResource( 2 )

[node name="landing_zone" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="landing_zone"]
shape = SubResource( 1 )

[node name="package_timer" type="Timer" parent="."]
autostart = true

[node name="info" type="VBoxContainer" parent="."]
margin_left = -110.0
margin_top = -103.0
margin_right = 90.0
margin_bottom = -63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="info"]
visible = false
material = SubResource( 2 )
margin_right = 200.0
margin_bottom = 13.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
text = "Location Name"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="horizontal" type="HBoxContainer" parent="info"]
margin_left = 81.0
margin_right = 119.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4

[node name="plane_count" type="HBoxContainer" parent="info/horizontal"]
margin_top = 3.0
margin_right = 17.0
margin_bottom = 16.0
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="info/horizontal/plane_count"]
material = SubResource( 4 )
margin_top = 5.0
margin_right = 8.0
margin_bottom = 13.0
size_flags_vertical = 8
texture = ExtResource( 4 )

[node name="count" type="Label" parent="info/horizontal/plane_count"]
material = SubResource( 4 )
margin_left = 12.0
margin_right = 17.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="package_count" type="HBoxContainer" parent="info/horizontal"]
margin_left = 21.0
margin_top = 3.0
margin_right = 38.0
margin_bottom = 16.0
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="info/horizontal/package_count"]
material = SubResource( 4 )
margin_top = 5.0
margin_right = 8.0
margin_bottom = 13.0
size_flags_vertical = 8
texture = ExtResource( 6 )

[node name="count" type="Label" parent="info/horizontal/package_count"]
material = SubResource( 4 )
margin_left = 12.0
margin_right = 17.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="runway" type="Node2D" parent="."]
visible = false

[node name="ground" type="Sprite" parent="runway"]
position = Vector2( 0, 137 )
texture = ExtResource( 1 )

[node name="ground2" type="Sprite" parent="runway"]
position = Vector2( 0, -93 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="landing_zone" to="." method="_landing_zone_entered"]
[connection signal="area_exited" from="landing_zone" to="." method="_left_landing_zone"]
[connection signal="timeout" from="package_timer" to="." method="_generate_package"]
